added new html report

--- a/src/main/resources/report/summary.html
+++ b/src/main/resources/report/summary.html
@@ -9,9 +9,11 @@
         <h1>Summary report</h1>
         <ul>
             <li><a href="searchFound.html">search report</a></li>
-            <li><a href="searchNotFound.html">search report</a></li>
-            <li><a href="searchNotExist.html">search report</a></li>
+            <li><a href="searchNotFound.html">search not found report</a></li>
+            <li><a href="searchNotExist.html">search not exist report</a></li>
             <li><a href="alignment.html">alignment report</a></li>
+            <li><a href="standards.html">standards report</a></li>
+            <li><a href="bounds aligned.html">bounds aligned report</a></li>
         </ul>
     </div>
 </body>
