added creating svg for comparing annotations, fixed html template

--- a/src/main/resources/report/summary.html
+++ b/src/main/resources/report/summary.html
@@ -4,18 +4,67 @@
     <title>summmary</title>
 </head>
 
+<style>
+
+header {
+  color: white;
+  font-size: 30px;
+  font-family: arial;
+  font-weight: bold;
+  text-align: center;
+  padding: 30px;
+  background-color: rgb(100, 100, 100);
+}
+
+
+section {
+  background-color: rgb(200, 200, 200);
+  font-family: arial;
+  font-size: 20px;
+}
+
+div {
+  padding-left: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+div:hover {
+  background-color: rgb(50, 50, 50);
+}
+
+a {
+  text-decoration: none;
+}
+
+a:link {
+  color: white;
+}
+
+a:active {
+  color: white;
+}
+
+a:visited {
+  color: white;
+}
+
+</style>
+
 <body>
-    <div class="menu">
-        <h1>Summary report</h1>
-        <ul>
-            <li><a href="searchFound.html">search report</a></li>
-            <li><a href="searchNotFound.html">search not found report</a></li>
-            <li><a href="searchNotExist.html">search not exist report</a></li>
-            <li><a href="alignment.html">alignment report</a></li>
-            <li><a href="standards.html">standards report</a></li>
-            <li><a href="bounds aligned.html">bounds aligned report</a></li>
-        </ul>
-    </div>
+<header>
+    Summary report
+</header>
+<section>
+    <div><a href="searchFound.html" target="_blank">search report</a></div>
+    <div><a href="searchNotFound.html" target="_blank">search not found report</a></div>
+    <div><a href="searchNotExist.html" target="_blank">search not exist report</a></div>
+    <div><a href="alignment.html" target="_blank">alignment report</a></div>
+    <div><a href="standards.html" target="_blank">standards report</a></div>
+    <div><a href="bounds aligned.html" target="_blank">bounds aligned report</a></div>
+    <div><a href="compare(std better than var).html" target="_blank">compare(std better than var)</a></div>
+    <div><a href="compare(var better than std).html" target="_blank">compare(var better than std)</a></div>
+</section>
 </body>
 
 </html>
