--- a/src/main/resources/report/template.html
+++ b/src/main/resources/report/template.html
@@ -38,5 +38,5 @@ section {
     LOAD MORE
 </button>
 <!--script-->
-<script type="text/javascript" src="bounds aligned.js"></script></body>
+</body>
 </html>
