added svg html report for reversed

--- a/src/main/resources/report/summary.html
+++ b/src/main/resources/report/summary.html
@@ -64,6 +64,7 @@ a:visited {
     <div><a href="bounds aligned.html" target="_blank">bounds aligned report</a></div>
     <div><a href="compare(std better than var).html" target="_blank">compare(std better than var)</a></div>
     <div><a href="compare(var better than std).html" target="_blank">compare(var better than std)</a></div>
+    <div><a href="alignment reverse.html" target="_blank">alignment reverse</a></div>
 </section>
 </body>
 
