--- a/src/main/resources/report/summary.html
+++ b/src/main/resources/report/summary.html
@@ -62,6 +62,7 @@ a:visited {
     <div><a href="alignment.html" target="_blank">alignment report</a></div>
     <div><a href="alignment(modifications in tag).html" target="_blank">alignment(modifications in tag)</a></div>
     <div><a href="alignment(not only tag).html" target="_blank">alignment (not only tag)</a></div>
+    <div><a href="alignment(rounded by annotations).html" target="_blank">alignment(rounded by annotations)</a></div>
     <div><a href="standards.html" target="_blank">standards report</a></div>
     <div><a href="bounds aligned.html" target="_blank">bounds aligned report</a></div>
     <div><a href="compare(std better than var).html" target="_blank">compare(std better than var)</a></div>
