--- a/src/main/resources/report/summary.html
+++ b/src/main/resources/report/summary.html
@@ -60,7 +60,6 @@ a:visited {
     <div><a href="searchNotFound.html" target="_blank">search not found report</a></div>
     <div><a href="searchNotExist.html" target="_blank">search not exist report</a></div>
     <div><a href="alignment.html" target="_blank">alignment report</a></div>
-    <div><a href="alignment reverse.html" target="_blank">alignment(reverse)</a></div>
     <div><a href="alignment(modifications in tag).html" target="_blank">alignment(modifications in tag)</a></div>
     <div><a href="alignment(not only tag).html" target="_blank">alignment (not only tag)</a></div>
     <div><a href="alignment(rounded by annotations).html" target="_blank">alignment(rounded by annotations)</a></div>
@@ -68,7 +67,7 @@ a:visited {
     <div><a href="standards.html" target="_blank">standards report</a></div>
     <div><a href="standard(bounds aligned).html" target="_blank">standard(bounds aligned)</a></div>
     <div><a href="compare(std better than var).html" target="_blank">compare(std better than var)</a></div>
-    <div><a href="compare(var better than std).html" target="_blank">compare(var better than std)</a></div
+    <div><a href="compare(var better than std).html" target="_blank">compare(var better than std)</a></div>
 </section>
 </body>
 
