huge refactoring: splitted task and output added new abstraction - class Condition it's similar to filter

--- a/src/main/resources/report/summary.html
+++ b/src/main/resources/report/summary.html
@@ -64,8 +64,10 @@ a:visited {
     <div><a href="alignment(not only tag).html" target="_blank">alignment (not only tag)</a></div>
     <div><a href="alignment(rounded by annotations).html" target="_blank">alignment(rounded by annotations)</a></div>
     <div><a href="alignment(bounds aligned).html" target="_blank">alignment(bounds aligned)</a></div>
+    <div><a href="alignment(equal peaks).html" target="_blank">alignment(equal peaks)</a></div>
     <div><a href="standards.html" target="_blank">standards report</a></div>
     <div><a href="standard(bounds aligned).html" target="_blank">standard(bounds aligned)</a></div>
+    <div><a href="standard(equal peaks).html" target="_blank">standard(equal peaks)</a></div>
     <div><a href="compare(std better than var).html" target="_blank">compare(std better than var)</a></div>
     <div><a href="compare(var better than std).html" target="_blank">compare(var better than std)</a></div>
 </section>
